Lazarus_Athena/include/X11/Xaw/in_arbeit/Intrinsic.h

typedef const char *String;
typedef char *String;
typedef struct _WidgetRec *Widget;
typedef struct _WidgetClassRec *WidgetClass;
typedef struct _XtActionsRec *XtActionList;
typedef struct _XtAppStruct *XtAppContext;
typedef XtUIntPtr	XtIntervalId;
typedef XtUIntPtr	XtInputId;
typedef XtUIntPtr	XtSignalId;
typedef int		XtCacheType;
typedef char		Boolean;
typedef unsigned int	Cardinal;
typedef unsigned short	Dimension;  
typedef short		Position;   
typedef void*		XtPointer;
typedef struct _TranslationData *XtTranslations;
typedef struct _TranslationData *XtAccelerators;
typedef unsigned int Modifiers;
typedef void (*XtActionProc)(
    Widget 		,
    XEvent*		,
    String*		,
    Cardinal*		
);
typedef enum {
    XtAddress,		
    XtBaseOffset,	
    XtImmediate,	
    XtResourceString,	
    XtResourceQuark,	
    XtWidgetBaseOffset,	
    XtProcedureArg	
} XtAddressMode;
typedef struct {
    XtAddressMode   address_mode;
    XtPointer	    address_id;
    Cardinal	    size;
} XtConvertArgRec, *XtConvertArgList;
typedef void (*XtConverter)( 
    XrmValue*		,
    Cardinal*		,
    XrmValue*		,
    XrmValue*		
);
typedef Boolean (*XtTypeConverter)(
    Display*		,
    XrmValue*		,
    Cardinal*		,
    XrmValue*		,
    XrmValue*		,
    XtPointer*		
);
typedef void (*XtDestructor)(
    XtAppContext	,
    XrmValue*		,
    XtPointer 		,
    XrmValue*		,
    Cardinal*		
);
typedef Opaque XtCacheRef;
typedef Opaque XtActionHookId;
typedef void (*XtActionHookProc)(
    Widget		,
    XtPointer		,
    String		,
    XEvent*		,
    String*		,
    Cardinal*		
);
typedef void (*XtKeyProc)(
    Display*		,
    _XtKeyCode 		,
    Modifiers		,
    Modifiers*		,
    KeySym*		
);
typedef void (*XtCaseProc)(
    Display*		,
    KeySym		,
    KeySym*		,
    KeySym*		
);
typedef void (*XtEventHandler)(
    Widget 		,
    XtPointer 		,
    XEvent*		,
    Boolean*		
);
typedef unsigned long EventMask;
typedef enum {XtListHead, XtListTail } XtListPosition;
typedef unsigned long	XtInputMask;
typedef void (*XtTimerCallbackProc)(
    XtPointer 		,
    XtIntervalId*	
);
typedef void (*XtInputCallbackProc)(
    XtPointer 		,
    int*		,
    XtInputId*		
);
typedef void (*XtSignalCallbackProc)(
    XtPointer		,
    XtSignalId*		
);
typedef enum  {
    XtGeometryYes,	  
    XtGeometryNo,	  
    XtGeometryAlmost,	  
    XtGeometryDone	  
} XtGeometryResult;
typedef Boolean (*XtConvertSelectionProc)(
    Widget 		,
    Atom*		,
    Atom*		,
    Atom*		,
    XtPointer*		,
    unsigned long*	,
    int*		
);
typedef void (*XtLoseSelectionProc)(
    Widget 		,
    Atom*		
);
typedef void (*XtSelectionDoneProc)(
    Widget 		,
    Atom*		,
    Atom*		
);
typedef void (*XtLoseSelectionIncrProc)(
    Widget 		,
    Atom*		,
    XtPointer 		
);
typedef void (*XtSelectionDoneIncrProc)(
    Widget 		,
    Atom*		,
    Atom*		,
    XtRequestId*	,
    XtPointer 		
);
typedef Boolean (*XtConvertSelectionIncrProc)(
    Widget 		,
    Atom*		,
    Atom*		,
    Atom*		,
    XtPointer*		,
    unsigned long*	,
    int*		,
    unsigned long*	,
    XtPointer 		,
    XtRequestId*	
);
typedef void (*XtCancelConvertSelectionProc)(
    Widget 		,
    Atom*		,
    Atom*		,
    XtRequestId*	,
    XtPointer 		
);
typedef Boolean (*XtEventDispatchProc)(
    XEvent*		
);
typedef void (*XtExtensionSelectProc)(
    Widget		,
    int*		,
    XtPointer*		,
    int			,
    XtPointer		
);
extern Boolean XtConvertAndStore(
    Widget 		,
    _Xconst _XtString 	,
    XrmValue*		,
    _Xconst _XtString 	,
    XrmValue*		
);
extern Boolean XtCallConverter(
    Display*		,
    XtTypeConverter 	,
    XrmValuePtr 	,
    Cardinal 		,
    XrmValuePtr 	,
    XrmValue*		,
    XtCacheRef*		
);
extern Boolean XtDispatchEvent(
    XEvent* 		
);
extern Boolean XtCallAcceptFocus(
    Widget 		,
    Time*		
);
extern Boolean XtPeekEvent( 
    XEvent*		
);
extern Boolean XtAppPeekEvent(
    XtAppContext 	,
    XEvent*		
);
extern Boolean XtIsSubclass(
    Widget 		,
    WidgetClass 	
);
extern Boolean XtIsObject(
    Widget 		
);
extern Boolean _XtCheckSubclassFlag( 
    Widget		,
    _XtXtEnum		
);
extern Boolean _XtIsSubclassOf( 
    Widget		,
    WidgetClass		,
    WidgetClass		,
    _XtXtEnum		
);
extern Boolean XtIsManaged(
    Widget 		
);
extern Boolean XtIsRealized(
    Widget 		
);
extern Boolean XtIsSensitive(
    Widget 		
);
extern Boolean XtOwnSelection(
    Widget 		,
    Atom 		,
    Time 		,
    XtConvertSelectionProc ,
    XtLoseSelectionProc	,
    XtSelectionDoneProc 
);
extern Boolean XtOwnSelectionIncremental(
    Widget 		,
    Atom 		,
    Time 		,
    XtConvertSelectionIncrProc	,
    XtLoseSelectionIncrProc	,
    XtSelectionDoneIncrProc	,
    XtCancelConvertSelectionProc ,
    XtPointer 		
);
extern XtGeometryResult XtMakeResizeRequest(
    Widget 		,
    _XtDimension	,
    _XtDimension	,
    Dimension*		,
    Dimension*		
);
extern void XtTranslateCoords(
    Widget 		,
    _XtPosition		,
    _XtPosition		,
    Position*		,
    Position*		
);
extern KeySym* XtGetKeysymTable(
    Display*		,
    KeyCode*		,
    int*		
);
extern void XtKeysymToKeycodeList(
    Display*		,
    KeySym 		,
    KeyCode**		,
    Cardinal*		
);
extern void XtStringConversionWarning( 
    _Xconst _XtString	,
    _Xconst _XtString	
);
extern void XtDisplayStringConversionWarning(
    Display*	 	,
    _Xconst _XtString	,
    _Xconst _XtString	
);
extern XtConvertArgRec const colorConvertArgs[];
extern XtConvertArgRec const screenConvertArg[];
extern void XtAppAddConverter( 
    XtAppContext	,
    _Xconst _XtString	,
    _Xconst _XtString	,
    XtConverter 	,
    XtConvertArgList	,
    Cardinal 		
);
extern void XtAddConverter( 
    _Xconst _XtString	,
    _Xconst _XtString 	,
    XtConverter 	,
    XtConvertArgList 	,
    Cardinal 		
);
extern void XtSetTypeConverter(
    _Xconst _XtString 	,
    _Xconst _XtString 	,
    XtTypeConverter 	,
    XtConvertArgList 	,
    Cardinal 		,
    XtCacheType 	,
    XtDestructor 	
);
extern void XtAppSetTypeConverter(
    XtAppContext 	,
    _Xconst _XtString 	,
    _Xconst _XtString 	,
    XtTypeConverter 	,
    XtConvertArgList 	,
    Cardinal 		,
    XtCacheType 	,
    XtDestructor 	
);
extern void XtConvert( 
    Widget 		,
    _Xconst _XtString 	,
    XrmValue*		,
    _Xconst _XtString 	,
    XrmValue*		
);
extern void XtDirectConvert( 
    XtConverter 	,
    XrmValuePtr 	,
    Cardinal 		,
    XrmValuePtr 	,
    XrmValue*		
);
extern XtTranslations XtParseTranslationTable(
    _Xconst _XtString	
);
extern XtAccelerators XtParseAcceleratorTable(
    _Xconst _XtString	
);
extern void XtOverrideTranslations(
    Widget 		,
    XtTranslations 	
);
extern void XtAugmentTranslations(
    Widget 		,
    XtTranslations 	
);
extern void XtInstallAccelerators(
    Widget 		,
    Widget		
);
extern void XtInstallAllAccelerators(
    Widget 		,
    Widget		
);
extern void XtUninstallTranslations(
    Widget 		
);
extern void XtAppAddActions(
    XtAppContext 	,
    XtActionList 	,
    Cardinal 		
);
extern void XtAddActions( 
    XtActionList 	,
    Cardinal 		
);
extern XtActionHookId XtAppAddActionHook(
    XtAppContext 	,
    XtActionHookProc 	,
    XtPointer 		
);
extern void XtRemoveActionHook(
    XtActionHookId 	
);
extern void XtGetActionList(
    WidgetClass		,
    XtActionList*	,
    Cardinal*		
);
extern void XtCallActionProc(
    Widget		,
    _Xconst _XtString	,
    XEvent*		,
    String*		,
    Cardinal		
);
extern void XtRegisterGrabAction(
    XtActionProc 	,
    _XtBoolean 		,
    unsigned int 	,
    int			,
    int	 		
);
extern void XtSetMultiClickTime(
    Display*		,
    int 		
);
extern int XtGetMultiClickTime(
    Display*		
);
extern KeySym XtGetActionKeysym(
    XEvent*		,
    Modifiers*		
);
extern void XtTranslateKeycode(
    Display*		,
    _XtKeyCode 		,
    Modifiers 		,
    Modifiers*		,
    KeySym*		
);
extern void XtTranslateKey(
    Display*		,
    _XtKeyCode		,
    Modifiers		,
    Modifiers*		,
    KeySym*		
);
extern void XtSetKeyTranslator(
    Display*		,
    XtKeyProc 		
);
extern void XtRegisterCaseConverter(
    Display*		,
    XtCaseProc 		,
    KeySym 		,
    KeySym 		
);
extern void XtConvertCase(
    Display*		,
    KeySym 		,
    KeySym*		,
    KeySym*		
);
#define XtAllEvents ((EventMask) -1L)
extern void XtAddEventHandler(
    Widget 		,
    EventMask 		,
    _XtBoolean 		,
    XtEventHandler 	,
    XtPointer 		
);
extern void XtRemoveEventHandler(
    Widget 		,
    EventMask 		,
    _XtBoolean 		,
    XtEventHandler 	,
    XtPointer 		
);
extern void XtAddRawEventHandler(
    Widget 		,
    EventMask 		,
    _XtBoolean 		,
    XtEventHandler 	,
    XtPointer 		
);
extern void XtRemoveRawEventHandler(
    Widget 		,
    EventMask 		,
    _XtBoolean 		,
    XtEventHandler 	,
    XtPointer 		
);
extern void XtInsertEventHandler(
    Widget 		,
    EventMask 		,
    _XtBoolean 		,
    XtEventHandler 	,
    XtPointer 		,
    XtListPosition 	
);
extern void XtInsertRawEventHandler(
    Widget 		,
    EventMask 		,
    _XtBoolean 		,
    XtEventHandler 	,
    XtPointer 		,
    XtListPosition 	
);
extern XtEventDispatchProc XtSetEventDispatcher(
    Display*		,
    int			,
    XtEventDispatchProc	
);
extern Boolean XtDispatchEventToWidget(
    Widget		,
    XEvent*		
);
extern void XtInsertEventTypeHandler(
    Widget		,
    int			,
    XtPointer		,
    XtEventHandler	,
    XtPointer		,
    XtListPosition	
);
extern void XtRemoveEventTypeHandler(
    Widget		,
    int			,
    XtPointer		,
    XtEventHandler	,
    XtPointer		
);
extern EventMask XtBuildEventMask(
    Widget 		
);
extern void XtRegisterExtensionSelector(
    Display*		,
    int			,
    int			,
    XtExtensionSelectProc ,
    XtPointer		
);
extern void XtAddGrab(
    Widget 		,
    _XtBoolean 		,
    _XtBoolean 		
);
extern void XtRemoveGrab(
    Widget 		
);
extern void XtProcessEvent( 
    XtInputMask 		
);
extern void XtAppProcessEvent(
    XtAppContext 		,
    XtInputMask 		
);
extern void XtMainLoop( 
    void
);
extern void XtAppMainLoop(
    XtAppContext 		
);
extern void XtAddExposureToRegion(
    XEvent*		,
    Region 		
);
extern void XtSetKeyboardFocus(
    Widget		,
    Widget 		
);
extern Widget XtGetKeyboardFocusWidget(
    Widget		
);
extern XEvent* XtLastEventProcessed(
    Display*		
);
extern Time XtLastTimestampProcessed(
    Display*		
);
extern XtIntervalId XtAddTimeOut( 
    unsigned long 	,
    XtTimerCallbackProc ,
    XtPointer 		
);
extern XtIntervalId XtAppAddTimeOut(
    XtAppContext 	,
    unsigned long 	,
    XtTimerCallbackProc ,
    XtPointer 		
);
extern void XtRemoveTimeOut(
    XtIntervalId 	
);
extern XtInputId XtAddInput( 
    int 		,
    XtPointer 		,
    XtInputCallbackProc ,
    XtPointer 		
);
extern XtInputId XtAppAddInput(
    XtAppContext       	,
    int 		,
    XtPointer 		,
    XtInputCallbackProc ,
    XtPointer 		
);
extern void XtRemoveInput(
    XtInputId 		
);
extern XtSignalId XtAddSignal(
    XtSignalCallbackProc ,
    XtPointer		);
extern XtSignalId XtAppAddSignal(
    XtAppContext       	,
    XtSignalCallbackProc ,
    XtPointer 		
);
extern void XtRemoveSignal(
    XtSignalId 		
);
extern void XtNoticeSignal(
    XtSignalId		
);
extern void XtNextEvent( 
    XEvent* 		
);