X11-Include.xxxxxxxxxxxxxxxx/X11/Intrinsic.pp


      PXtResource = ^TXtResource;
      TXtResource = record
          resource_name : TString;
          resource_class : TString;
          resource_type : TString;
          resource_size : TCardinal;
          resource_offset : TCardinal;
          default_type : TString;
          default_addr : TXtPointer;
        end;
      TXtResourceList = PXtResource;
      PXtResourceList = ^TXtResourceList;


      TXtResourceDefaultProc = procedure (para1:TWidget; para2:longint; para3:PXrmValue);cdecl;


      TXtLanguageProc = function (para1:PDisplay; para2:TString; para3:TXtPointer):TString;cdecl;


      TXtErrorMsgHandler = procedure (para1:TString; para2:TString; para3:TString; para4:TString; para5:PString; 
                    para6:PCardinal);cdecl;


      TXtErrorHandler = procedure (para1:TString);cdecl;


      TXtCreatePopupChildProc = procedure (para1:TWidget);cdecl;


      TXtWorkProc = function (para1:TXtPointer):TBoolean;cdecl;

      PSubstitutionRec = ^TSubstitutionRec;
      TSubstitutionRec = record
          match : char;
          substitution : TXtString;
        end;
      TSubstitution = PSubstitutionRec;
      PSubstitution = ^TSubstitution;


      TXtFilePredicate = function (para1:TString):TBoolean;cdecl;

      PXtRequestId = ^TXtRequestId;
      TXtRequestId = TXtPointer;


      TXtConvertSelectionProc = function (para1:TWidget; para2:PAtom; para3:PAtom; para4:PAtom; para5:PXtPointer; 
                   para6:Pdword; para7:Plongint):TBoolean;cdecl;


      TXtLoseSelectionProc = procedure (para1:TWidget; para2:PAtom);cdecl;


      TXtSelectionDoneProc = procedure (para1:TWidget; para2:PAtom; para3:PAtom);cdecl;


      TXtSelectionCallbackProc = procedure (para1:TWidget; para2:TXtPointer; para3:PAtom; para4:PAtom; para5:TXtPointer; 
                    para6:Pdword; para7:Plongint);cdecl;


      TXtLoseSelectionIncrProc = procedure (para1:TWidget; para2:PAtom; para3:TXtPointer);cdecl;


      TXtSelectionDoneIncrProc = procedure (para1:TWidget; para2:PAtom; para3:PAtom; para4:PXtRequestId; para5:TXtPointer);cdecl;


      TXtConvertSelectionIncrProc = function (para1:TWidget; para2:PAtom; para3:PAtom; para4:PAtom; para5:PXtPointer; 
                   para6:Pdword; para7:Plongint; para8:Pdword; para9:TXtPointer; para10:PXtRequestId):TBoolean;cdecl;


      TXtCancelConvertSelectionProc = procedure (para1:TWidget; para2:PAtom; para3:PAtom; para4:PXtRequestId; para5:TXtPointer);cdecl;


      TXtEventDispatchProc = function (para1:PXEvent):TBoolean;cdecl;


      TXtExtensionSelectProc = procedure (para1:TWidget; para2:Plongint; para3:PXtPointer; para4:longint; para5:TXtPointer);cdecl;

(* error 
extern Boolean XtConvertAndStore(

in declaration at line 509 *)


function XtCallConverter(para1:PDisplay; para2:TXtTypeConverter; para3:TXrmValuePtr; para4:TCardinal; para5:TXrmValuePtr; 
               para6:PXrmValue; para7:PXtCacheRef):TBoolean;cdecl;external;

function XtDispatchEvent(para1:PXEvent):TBoolean;cdecl;external;

function XtCallAcceptFocus(para1:TWidget; para2:PTime):TBoolean;cdecl;external;


function XtPeekEvent(para1:PXEvent):TBoolean;cdecl;external;

function XtAppPeekEvent(para1:TXtAppContext; para2:PXEvent):TBoolean;cdecl;external;

function XtIsSubclass(para1:TWidget; para2:TWidgetClass):TBoolean;cdecl;external;

function XtIsObject(para1:TWidget):TBoolean;cdecl;external;


function _XtCheckSubclassFlag(para1:TWidget; para2:TXtXtEnum):TBoolean;cdecl;external;


function _XtIsSubclassOf(para1:TWidget; para2:TWidgetClass; para3:TWidgetClass; para4:TXtXtEnum):TBoolean;cdecl;external;

function XtIsManaged(para1:TWidget):TBoolean;cdecl;external;

function XtIsRealized(para1:TWidget):TBoolean;cdecl;external;

function XtIsSensitive(para1:TWidget):TBoolean;cdecl;external;

function XtOwnSelection(para1:TWidget; para2:TAtom; para3:TTime; para4:TXtConvertSelectionProc; para5:TXtLoseSelectionProc; 
               para6:TXtSelectionDoneProc):TBoolean;cdecl;external;

function XtOwnSelectionIncremental(para1:TWidget; para2:TAtom; para3:TTime; para4:TXtConvertSelectionIncrProc; para5:TXtLoseSelectionIncrProc; 
               para6:TXtSelectionDoneIncrProc; para7:TXtCancelConvertSelectionProc; para8:TXtPointer):TBoolean;cdecl;external;

function XtMakeResizeRequest(para1:TWidget; para2:TXtDimension; para3:TXtDimension; para4:PDimension; para5:PDimension):TXtGeometryResult;cdecl;external;

procedure XtTranslateCoords(para1:TWidget; para2:TXtPosition; para3:TXtPosition; para4:PPosition; para5:PPosition);cdecl;external;

function XtGetKeysymTable(para1:PDisplay; para2:PKeyCode; para3:Plongint):PKeySym;cdecl;external;

procedure XtKeysymToKeycodeList(para1:PDisplay; para2:TKeySym; para3:PPKeyCode; para4:PCardinal);cdecl;external;


procedure XtStringConversionWarning(_XtString:TXconst; _XtString:TXconst);cdecl;external;

procedure XtDisplayStringConversionWarning(para1:PDisplay; _XtString:TXconst; _XtString:TXconst);cdecl;external;
(* error 
externalref XtConvertArgRec const colorConvertArgs[];
 in declarator_list *)
(* error 
externalref XtConvertArgRec const screenConvertArg[];
 in declarator_list *)


procedure XtAppAddConverter(para1:TXtAppContext; _XtString:TXconst; _XtString:TXconst; para4:TXtConverter; para5:TXtConvertArgList; 
                para6:TCardinal);cdecl;external;


procedure XtAddConverter(_XtString:TXconst; _XtString:TXconst; para3:TXtConverter; para4:TXtConvertArgList; para5:TCardinal);cdecl;external;

procedure XtSetTypeConverter(_XtString:TXconst; _XtString:TXconst; para3:TXtTypeConverter; para4:TXtConvertArgList; para5:TCardinal; 
                para6:TXtCacheType; para7:TXtDestructor);cdecl;external;

procedure XtAppSetTypeConverter(para1:TXtAppContext; _XtString:TXconst; _XtString:TXconst; para4:TXtTypeConverter; para5:TXtConvertArgList; 
                para6:TCardinal; para7:TXtCacheType; para8:TXtDestructor);cdecl;external;


procedure XtConvert(para1:TWidget; _XtString:TXconst; para3:PXrmValue; _XtString:TXconst; para5:PXrmValue);cdecl;external;


procedure XtDirectConvert(para1:TXtConverter; para2:TXrmValuePtr; para3:TCardinal; para4:TXrmValuePtr; para5:PXrmValue);cdecl;external;


function XtParseTranslationTable(_XtString:TXconst):TXtTranslations;cdecl;external;

function XtParseAcceleratorTable(_XtString:TXconst):TXtAccelerators;cdecl;external;

procedure XtOverrideTranslations(para1:TWidget; para2:TXtTranslations);cdecl;external;

procedure XtAugmentTranslations(para1:TWidget; para2:TXtTranslations);cdecl;external;

procedure XtInstallAccelerators(para1:TWidget; para2:TWidget);cdecl;external;

procedure XtInstallAllAccelerators(para1:TWidget; para2:TWidget);cdecl;external;

procedure XtUninstallTranslations(para1:TWidget);cdecl;external;

procedure XtAppAddActions(para1:TXtAppContext; para2:TXtActionList; para3:TCardinal);cdecl;external;


procedure XtAddActions(para1:TXtActionList; para2:TCardinal);cdecl;external;

function XtAppAddActionHook(para1:TXtAppContext; para2:TXtActionHookProc; para3:TXtPointer):TXtActionHookId;cdecl;external;

procedure XtRemoveActionHook(para1:TXtActionHookId);cdecl;external;

procedure XtGetActionList(para1:TWidgetClass; para2:PXtActionList; para3:PCardinal);cdecl;external;

procedure XtCallActionProc(para1:TWidget; _XtString:TXconst; para3:PXEvent; para4:PString; para5:TCardinal);cdecl;external;

procedure XtRegisterGrabAction(para1:TXtActionProc; para2:TXtBoolean; para3:dword; para4:longint; para5:longint);cdecl;external;

procedure XtSetMultiClickTime(para1:PDisplay; para2:longint);cdecl;external;

function XtGetMultiClickTime(para1:PDisplay):longint;cdecl;external;

function XtGetActionKeysym(para1:PXEvent; para2:PModifiers):TKeySym;cdecl;external;


procedure XtTranslateKeycode(para1:PDisplay; para2:TXtKeyCode; para3:TModifiers; para4:PModifiers; para5:PKeySym);cdecl;external;

procedure XtTranslateKey(para1:PDisplay; para2:TXtKeyCode; para3:TModifiers; para4:PModifiers; para5:PKeySym);cdecl;external;

procedure XtSetKeyTranslator(para1:PDisplay; para2:TXtKeyProc);cdecl;external;

procedure XtRegisterCaseConverter(para1:PDisplay; para2:TXtCaseProc; para3:TKeySym; para4:TKeySym);cdecl;external;

procedure XtConvertCase(para1:PDisplay; para2:TKeySym; para3:PKeySym; para4:PKeySym);cdecl;external;


    function XtAllEvents : TEventMask;      


procedure XtAddEventHandler(para1:TWidget; para2:TEventMask; para3:TXtBoolean; para4:TXtEventHandler; para5:TXtPointer);cdecl;external;

procedure XtRemoveEventHandler(para1:TWidget; para2:TEventMask; para3:TXtBoolean; para4:TXtEventHandler; para5:TXtPointer);cdecl;external;

procedure XtAddRawEventHandler(para1:TWidget; para2:TEventMask; para3:TXtBoolean; para4:TXtEventHandler; para5:TXtPointer);cdecl;external;

procedure XtRemoveRawEventHandler(para1:TWidget; para2:TEventMask; para3:TXtBoolean; para4:TXtEventHandler; para5:TXtPointer);cdecl;external;

procedure XtInsertEventHandler(para1:TWidget; para2:TEventMask; para3:TXtBoolean; para4:TXtEventHandler; para5:TXtPointer; 
                para6:TXtListPosition);cdecl;external;

procedure XtInsertRawEventHandler(para1:TWidget; para2:TEventMask; para3:TXtBoolean; para4:TXtEventHandler; para5:TXtPointer; 
                para6:TXtListPosition);cdecl;external;

function XtSetEventDispatcher(para1:PDisplay; para2:longint; para3:TXtEventDispatchProc):TXtEventDispatchProc;cdecl;external;

function XtDispatchEventToWidget(para1:TWidget; para2:PXEvent):TBoolean;cdecl;external;

procedure XtInsertEventTypeHandler(para1:TWidget; para2:longint; para3:TXtPointer; para4:TXtEventHandler; para5:TXtPointer; 
                para6:TXtListPosition);cdecl;external;

procedure XtRemoveEventTypeHandler(para1:TWidget; para2:longint; para3:TXtPointer; para4:TXtEventHandler; para5:TXtPointer);cdecl;external;

function XtBuildEventMask(para1:TWidget):TEventMask;cdecl;external;

procedure XtRegisterExtensionSelector(para1:PDisplay; para2:longint; para3:longint; para4:TXtExtensionSelectProc; para5:TXtPointer);cdecl;external;

procedure XtAddGrab(para1:TWidget; para2:TXtBoolean; para3:TXtBoolean);cdecl;external;

procedure XtRemoveGrab(para1:TWidget);cdecl;external;


procedure XtProcessEvent(para1:TXtInputMask);cdecl;external;

procedure XtAppProcessEvent(para1:TXtAppContext; para2:TXtInputMask);cdecl;external;

procedure XtMainLoop;cdecl;external;

procedure XtAppMainLoop(para1:TXtAppContext);cdecl;external;

procedure XtAddExposureToRegion(para1:PXEvent; para2:TRegion);cdecl;external;

procedure XtSetKeyboardFocus(para1:TWidget; para2:TWidget);cdecl;external;

function XtGetKeyboardFocusWidget(para1:TWidget):TWidget;cdecl;external;

function XtLastEventProcessed(para1:PDisplay):PXEvent;cdecl;external;

function XtLastTimestampProcessed(para1:PDisplay):TTime;cdecl;external;



function XtAddTimeOut(para1:dword; para2:TXtTimerCallbackProc; para3:TXtPointer):TXtIntervalId;cdecl;external;

function XtAppAddTimeOut(para1:TXtAppContext; para2:dword; para3:TXtTimerCallbackProc; para4:TXtPointer):TXtIntervalId;cdecl;external;

procedure XtRemoveTimeOut(para1:TXtIntervalId);cdecl;external;


function XtAddInput(para1:longint; para2:TXtPointer; para3:TXtInputCallbackProc; para4:TXtPointer):TXtInputId;cdecl;external;

function XtAppAddInput(para1:TXtAppContext; para2:longint; para3:TXtPointer; para4:TXtInputCallbackProc; para5:TXtPointer):TXtInputId;cdecl;external;

procedure XtRemoveInput(para1:TXtInputId);cdecl;external;
function XtAddSignal(para1:TXtSignalCallbackProc; para2:TXtPointer):TXtSignalId;cdecl;external;

function XtAppAddSignal(para1:TXtAppContext; para2:TXtSignalCallbackProc; para3:TXtPointer):TXtSignalId;cdecl;external;

procedure XtRemoveSignal(para1:TXtSignalId);cdecl;external;

procedure XtNoticeSignal(para1:TXtSignalId);cdecl;external;


procedure XtNextEvent(para1:PXEvent);cdecl;external;
